      * Messages get folded instead of repeating
      * Asteroids no longer fade out if close to the player
      * Display fuel consumption for ships in the equipment overlay
      * Added option to match speed with slowest ship in the fleet (on by default)
      * Made it so ships in the equipment screen do not change order based on value
   * Content
      * 1 new mission
         * Hack the Gibson!
      * New portraits
   * Engine
      * Stats (except inverted stats) are now additive instead of multiplicative
      * Try to merge saves if multiple directories correspond to the same player
      * More robust weapon set support that can handle multiple overlapping weapon sets
      * Faster handling of asteroids with large exclusion areas
      * Added fuel_usage_mod ship stat
      * Fixed player losing navigation targets when unidiff is applied
      * Fixed ai.idir giving wrong answer by M_PI_2 in some cases
      * Threaded more loading components
      * Lua require now caches chunks
      * Dropped SDL_image fallback
      * Use higher internal timer for all platforms
      * Support for Tracy
      * Warn the player if they try to use a name with all space characters
      * Decoupled the collision system from the rendering system
      * Support for 3D models with fancy new effects
      * Added a low memory mode to use fewer and smaller textures with 3D
      * Lazy load ship and outfit graphics to reduce memory usage and decrease load time
   * Fixes
      * PSO and Mizar nebulas have trails again
      * Removed fancy background mode
      * Can remove fighter bays with deployed fighters

* 0.11.4
   * More guards against divides by zero in autonav
   * Fixed warnings on certain OpenGL drivers
   * Fixed toolkit not rerendering when right-clicking on tabbed windows
   * Fixed Marius enclave description
   * Tweaked Za'lek Diablo and Mephisto stats so that they are better suited to their respective roles