@@ -11,6 +11,7 @@
       * Display fuel consumption for ships in the equipment overlay
       * Added option to match speed with slowest ship in the fleet (on by default)
       * Made it so ships in the equipment screen do not change order based on value
+      * Mark spaceport bar tab when there is an important NPC
    * Content
       * 1 new mission
          * Hack the Gibson!
